# actions-experiment

./: CMakeLists.txt  main.cpp  test_version.cpp
.github/workflows/: release.yml
tests/: CMakeLists.txt  test_version.cpp
